name:           ansi-terminal-test
version:        0.1.0.0
synopsis:       Test ansi-terminal package
description:    Please see the README on Github at <https://github.com/mpilgrem/ansi-terminal-test#readme>
homepage:       https://github.com/mpilgrem/ansi-terminal-test#readme
bug-reports:    https://github.com/mpilgrem/ansi-terminal-test/issues
author:         Mike Pilgrem
maintainer:     public@pilgrem.com
copyright:      Copyright 2017 Mike Pilgrem
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    ChangeLog.md
    README.md

test-suite ansi-terminal-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ansi-terminal
    , base >=4.7 && <5
  other-modules:
      Paths_ansi_terminal_test
  default-language: Haskell2010
